# luadist

./: CMakeLists.txt  COPYRIGHT  README  dist.cmake  dist.info  luadist
doc/: index.html
doc/modules/: dist.dep.html  dist.fetch.html  dist.html  dist.log.html  dist.manifest.html  dist.package.html  dist.persist.html  dist.sys.html
lmod/: dist.lua
test/: test-dep.lua
test/dists/alpha/alpha-1.0/: dist.info
test/dists/alpha/alpha-2.0/: dist.info
test/dists/beta/beta-1.1/: dist.info
test/dists/beta/beta-2.1/: dist.info
